--- a/style.css
+++ b/style.css
@@ -37,10 +37,13 @@ h1 {
 h2 {
   font-size: 500px;
   color: var(--third);
-  margin-top: 0px;
+  margin-top: -10px;
+  margin-bottom: 30px;
 }
 
 h3 {
   font-size: 30px;
   color: var(--third);
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
